--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Telegram bot for VR Lounge CRM integration",
   "main": "telegram-bot.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "start": "node telegram-bot.js",
     "dev": "nodemon telegram-bot.js"
